# atom-os-field-substrate

./: .gitignore  APPLY.md  ARCHITECTURE.md  NOTES.md  README.md  STUDY.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: test.yml
patches/: 0001-atom-os-field-substrate.patch
scripts/: test-all.sh  test-quick.ps1
substrate/: Cargo.toml
substrate/.zcode-memory/tree-rag/: staging.jsonl
substrate/field-core/: Cargo.toml
substrate/field-core/src/: lib.rs
substrate/field-std/: Cargo.toml
substrate/field-std/src/: lib.rs
substrate/host-harness/: Cargo.toml
substrate/host-harness/src/: main.rs
substrate/integration-tests/closed-energy/: Cargo.toml
substrate/integration-tests/closed-energy/src/: main.rs
substrate/integration-tests/ipc-energy/: Cargo.toml
substrate/integration-tests/ipc-energy/src/: main.rs
substrate/integration-tests/scheduler-determinism/: Cargo.toml
substrate/integration-tests/scheduler-determinism/src/: main.rs
substrate/kernel-glue/: Cargo.toml
substrate/kernel-glue/src/: lib.rs
